@@ -1447,6 +1447,12 @@ function ozone_set_module_access_args
   fi
 
   # populate JVM args based on java version
+  if [[ "${JAVA_MAJOR_VERSION}" -ge 23 ]]; then
+    # allow sun.misc.Unsafe until protobuf-java moves away from it
+    # see: https://github.com/protocolbuffers/protobuf/issues/20760
+    # see: https://openjdk.org/jeps/471
+    OZONE_MODULE_ACCESS_ARGS="${OZONE_MODULE_ACCESS_ARGS} --sun-misc-unsafe-memory-access=allow"
+  fi
   if [[ "${JAVA_MAJOR_VERSION}" -ge 17 ]]; then
     OZONE_MODULE_ACCESS_ARGS="${OZONE_MODULE_ACCESS_ARGS} --add-opens java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED"
     OZONE_MODULE_ACCESS_ARGS="${OZONE_MODULE_ACCESS_ARGS} --add-exports java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED"
